# django_views_challenges

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg
django_views_routing_homework/: settings.py  urls.py
django_views_routing_homework/views/level_1/: a_welcome_user.py  b_bye_user.py  c_baned_username.py  d_user_info.py  e_month_title.py
django_views_routing_homework/views/level_2/: a_user_info_by_username.py  c_product_type.py  d_authorization.py
django_views_routing_homework/views/level_3/: a_user_ip.py  b_validate_user_data.py  c_github_full_name.py  d_file_generation.py
