[tool.poetry]
name = "django-views-challenges"
version = "0.1.0"
description = ""
authors = ["Octopulus96 <octopulus96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
django = "4.2.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
